--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,19 +6,17 @@ build:image:
   image: docker:git
   stage: build
   services:
-  - docker:dind
+    - docker:dind
   script:
     - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
     - docker build -t registry.gitlab.com/danielsiepmann/neotags .
     - docker push registry.gitlab.com/neotags/neotags:latest
-  only:
-    - master
+  # only:
+  #   - master
 
 lint:coding-guideline:
   image: 'registry.gitlab.com/danielsiepmann/neotags:latest'
   stage: test
-  before_script:
-    - pip install pep8
   script:
     - pep8 .
 
@@ -26,8 +24,6 @@ test:
   image: 'registry.gitlab.com/danielsiepmann/neotags:latest'
   stage: test
   before_script:
-    - apk add --no-cache gcc
-    - pip install neovim
     - cd rplugin
   script:
     - python -m unittest test.test_neotags
