Build docker image only on change

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,8 +11,9 @@ build:image:
     - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
     - docker build -t registry.gitlab.com/danielsiepmann/neotags .
     - docker push registry.gitlab.com/danielsiepmann/neotags:latest
-  # only:
-  #   - master
+  only:
+    changes:
+      - Dockerfile
 
 lint:coding-guideline:
   image: 'registry.gitlab.com/danielsiepmann/neotags:latest'
